--- a/code/SmartAgenda/src/main/resources/application.properties
+++ b/code/SmartAgenda/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/smart_agenda_db
+spring.datasource.username=admin
+spring.datasource.password=Parola1!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
