--- a/code/SmartAgenda/src/main/resources/application.properties
+++ b/code/SmartAgenda/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/smart_agenda_db
-spring.datasource.username=admin
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/smart-agenda-db
+spring.datasource.username=root
 spring.datasource.password=Parola1!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.data.jpa.repositories.enabled=true
+#spring.jpa.database=mysql
