--- a/code/SmartAgenda/src/main/resources/application.properties
+++ b/code/SmartAgenda/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/smart-agenda-db
 spring.datasource.username=root
 spring.datasource.password=Parola1!
