--- a/code/SmartAgenda/src/main/resources/application.properties
+++ b/code/SmartAgenda/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.password=Parola1!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
 #spring.data.jpa.repositories.enabled=true
 #spring.jpa.database=mysql
